modifications to navbar

--- a/chatbot/src/App.css
+++ b/chatbot/src/App.css
@@ -7,6 +7,7 @@
 img {
   max-width: 100%;
   height: auto;
+  top: 0;
 }
 .App {
   min-height: 100vh;
@@ -27,7 +28,19 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-height: 90px;
+  min-height: 60;
+  background-color: #ff7f34;
+  height : 80px;
+}
+@media (min-width: 801px){
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 85px;
+    background-color: #ff7f34;
+    height: 155px;
+  }
 }
 .navbar-menu-container {
   display: none;
