--- a/chatbot/src/App.css
+++ b/chatbot/src/App.css
@@ -31,6 +31,7 @@ nav {
   min-height: 60;
   background-color: #ff7f34;
   height : 80px;
+  padding-right: 5px;
 }
 @media (min-width: 801px){
   nav {
